Fix gap between header and nav

--- a/CSS/index-style.css
+++ b/CSS/index-style.css
@@ -203,7 +203,6 @@ p {
 
 header {
     text-align: center;
-    margin-bottom: 20px;
 }
 
 main {
